@@ -1,3 +1,6 @@
+31-08-2020 - [B]1.3.1[/B]
+- ReplaceHTML codes for listitems
+
 29-06-2020 - [B]1.3.0[/B]
 - New youtube api key
 - Various other bug fixes
